packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-stable/bad-ignored-segments.stderr
error: parameter must be named
         --- help: use a name such as `_guard` or `_param`
 --> tests/ui-fail-stable/bad-ignored-segments.rs:6:7
  |
6 | #[get("/c?<_>")]
  |       ^^^^^^^^

error: parameter must be named
         --- help: use a name such as `_guard` or `_param`
 --> tests/ui-fail-stable/bad-ignored-segments.rs:9:21
  |
9 | #[post("/d", data = "<_>")]
  |                     ^^^^^
